clase4/my-namespaces.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: red-team
---
kind: Namespace
apiVersion: v1
metadata:
  name: green-team
