clase4/pod_namespaces.yaml
kind: Pod
apiVersion: v1
metadata:
  name: nginx-pod-red
  namespace: red-team
spec:
  containers:
  - name: nginx
    image: nginx:alpine
---
kind: Pod
apiVersion: v1
metadata:
  name: nginx-pod-green
  namespace: green-team
spec:
  containers:
  - name: nginx
    image: nginx:alpine
