clase4/service_namespace.yaml
kind: Service
apiVersion: v1
metadata:
  name: nginx-svc
  namespace: green-team
spec:
  ports:
  - port: 80
