clase4/web1.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: web1
spec:
  selector:
    matchLabels:
      app: web1
  replicas: 2
  template:
    metadata:
      labels:
        app: web1
    spec:
      containers:
      - name: web1
        image: mario21ic/nginx:v1.1
        ports:
          - name: http
            containerPort: 80
            protocol: TCP
---
kind: Service
apiVersion: v1
metadata:
  name: web1-svc
spec:
  type: NodePort
  selector:
    app: web1
  ports:
    - port: 8080
      targetPort: 80
