clase4/web2.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
 name: web2
spec:
 selector:
   matchLabels:
     app: web2
 replicas: 2
 template:
   metadata:
     labels:
       app: web2
   spec:
     containers:
     - name: web2
       image: mario21ic/nginx:v1.2
       ports:
         - name: http
           containerPort: 80
           protocol: TCP
---
kind: Service
apiVersion: v1
metadata:
 name: web2-svc
spec:
 type: NodePort
 selector:
   app: web2
 ports:
   - port: 8080
     targetPort: 80
